(Fix) Change spacing for mobile ng-show

--- a/client/styles/options.css
+++ b/client/styles/options.css
@@ -44,6 +44,12 @@ body {
         display: inline-block;
         padding: .5%!important;
     }
+    .results {
+    text-align: center;
+    height: 2em;
+    font-size: 1em;
+    margin-bottom: 7%;
+    }
 }
 
 .filterOptions label {
